--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title >红浪漫工作室</title>
-    <link rel="icon" href="./img/hlmtb.ico" sizes="16x16">
+    <link rel="icon" href="./hlmtb.ico" sizes="16x16">
     <style>
         body {
             background-color: #f0f8ff; 
@@ -31,7 +31,7 @@
        
     </style>
 </head>
-<body background="./img/bkgrd.jpg"style=" background-repeat:no-repeat ;
+<body background="./bkgrd.jpg"style=" background-repeat:no-repeat ;
 background-size:100% 100%;
 background-attachment: fixed;">
     <header>
@@ -44,7 +44,7 @@ background-attachment: fixed;">
         <p style="color:rgb(253, 255, 255)">红浪漫工作室，致力于玩家游戏体验。</p>
         <h2 style="color:rgb(111, 3, 212)">工作室服务</h2>
         <ul>
-            <img src="./img/jgb.png" alt="价格表">
+            <img src="./jgb.png" alt="价格表">
         </ul>
 
         <h2 style="color:rgb(111, 3, 212)">控号服务人员</h2>
