--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ background-attachment: fixed;">
         <h2 style="color:rgb(111, 3, 212)">控号服务人员</h2>
         <p style="color:rgb(253, 255, 255)">我们提供专业的控号服务，控号前确保您的游戏账户安全。</p>
         <p style="color:rgb(253, 255, 255)">人员1：Tom开荒，负责范围：建盟控号抢龙，周六周天两天控号。</p>
-        <p style="color:rgb(253, 255, 255)">人员2：小万开荒，负责范围：新区晚上冲榜稳榜，周六周天两天天控号。</p>
+        <p style="color:rgb(253, 255, 255)">人员2：小万开荒，负责范围：新区晚上冲榜稳榜，周六周天两天控号。</p>
         <p style="color:rgb(253, 255, 255)">人员3：宣传员，负责范围：宣传。</p>
         <h2 style="color:rgb(111, 3, 212)">联系我们</h2>
         <p style="color:rgb(240, 46, 12)">如果您有需求或者任何问题，请随时联系我们。工作人员微信号码{1：lhmvery888 2：lzw2119772647 3：nixc2119701953}</p>
